# esp32-decentralized-event-system

./: CMakeLists.txt  README.md  keygen.py
KeyGenerator/: main.py
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
main/include/crypto/: hash_engine.hpp  hash_engine_error.hpp  signature_engine.hpp  signature_engine_error.hpp
main/include/events/: simple_event.hpp
main/include/keys/: .gitignore  event_keys.hpp
main/include/networking/: basic_codec.hpp  network_event_handler.hpp  network_event_handler_error.hpp  safe_lwip_socket.hpp  socket_address.hpp  tcp_socket_acceptor.hpp  tcp_socket_connection.hpp  udp_socket.hpp
main/include/tasks/: receiver_node_task.hpp  sender_node_task.hpp  test_task.hpp  wifi_ap_task.hpp
main/include/util/: esp_error.hpp  feed_the_beast.hpp  make_system_error.hpp  reverse_memcpy.hpp  safe_strcpy.hpp  uix.hpp
main/include/wifi/: wifi_access_point_handler.hpp  wifi_client_handler.hpp  wifi_generic_handler.hpp
main/source/crypto/: hash_engine.cpp  signature_engine.cpp
main/source/networking/: network_event_handler.ipp  tcp_socket_acceptor.cpp  tcp_socket_connection.cpp  udp_socket.cpp
main/source/tasks/: receiver_node_task.cpp  sender_node_task.cpp  test_task.cpp  wifi_ap_task.cpp
main/source/wifi/: wifi_access_point_handler.cpp  wifi_client_handler.cpp  wifi_generic_handler.cpp
